--- a/Home.css
+++ b/Home.css
@@ -10,7 +10,7 @@
 
 .u-section-1 .u-layout-cell-1 {
   pointer-events: auto;
-  min-height: 450px;
+  min-height: 480px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -19,28 +19,29 @@
 
 .u-section-1 .u-text-1 {
   font-weight: 700;
-  margin: -30px 195px 0 0;
+  margin: -29px 195px 0 0;
 }
 
 .u-section-1 .u-text-2 {
   font-weight: normal;
-  margin: 100px 0 0;
+  margin: 118px 0 0;
 }
 
 .u-section-1 .u-form-1 {
   height: 50px;
-  margin: 109px 171px 0 0;
+  margin: 121px 171px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
-  border-style: none;
+  border-style: solid;
   font-weight: 700;
   background-image: none;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 700;
-  margin: 6px 40px -30px 0;
+  background-image: none;
+  margin: 5px 40px -30px 0;
 }
 
 .u-section-1 .u-image-1 {
@@ -56,55 +57,49 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 610px;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    margin-top: 226px;
+    min-height: 687px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 384px;
+    min-height: 340px;
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
     margin-right: 28px;
   }
 
-  .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 67px;
-    margin-left: 4px;
-  }
-
   .u-section-1 .u-form-1 {
-    margin-top: 4px;
-    margin-right: 71px;
+    width: 533px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
     margin-right: 0;
-    margin-bottom: -20px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 321px;
+    min-height: 417px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 564px;
+    min-height: 864px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-bottom: 38px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 596px;
   }
 
   .u-section-1 .u-container-layout-1 {
     padding-right: 30px;
+    padding-bottom: 2px;
   }
 
   .u-section-1 .u-text-1 {
@@ -112,22 +107,26 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 34px;
-    margin-right: 20px;
-    margin-left: 0;
+    width: auto;
+    margin-top: 154px;
   }
 
   .u-section-1 .u-form-1 {
-    margin-top: 8px;
-    margin-right: 20px;
+    height: 52px;
+    width: 402px;
+    margin-top: 102px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-3 {
-    margin-bottom: -30px;
+    margin-top: 8px;
+    margin-right: -44px;
+    margin-bottom: -2px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 277px;
+    min-height: 596px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -138,49 +137,41 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1134px;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    margin-top: 255px;
-    margin-bottom: 0;
+    min-height: 902px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 435px;
+    min-height: 100px;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-right: 10px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: -22px;
-    margin-left: -50px;
-    margin-right: -50px;
+    width: auto;
+    margin-top: 0;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 31px;
-    margin-left: -50px;
-    margin-right: -50px;
+    margin-top: 20px;
+    margin-right: -10px;
+    margin-left: 10px;
   }
 
   .u-section-1 .u-form-1 {
-    height: 113px;
-    width: 540px;
-    margin-top: 7px;
-    margin-left: -50px;
-    margin-right: -50px;
+    height: 98px;
+    margin-top: 6px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-3 {
-    margin: 16px -50px -15px;
+    margin: 0 -10px 0 10px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 475px;
+    min-height: 532px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -191,79 +182,75 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 992px;
+    min-height: 985px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 200px;
-    margin-bottom: 40px;
+    width: 320px;
+    margin: 216px auto 20px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 374px;
+    min-height: 389px;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding: 0 10px 0 0;
+    padding-top: 41px;
+    padding-right: 0;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 0;
-    margin-right: -10px;
-    margin-left: 0;
+    margin-top: -41px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 14px;
-    margin-right: -10px;
+    animation-duration: 1000ms;
+    margin-top: 27px;
+    margin-right: 10px;
     margin-left: 0;
   }
 
   .u-section-1 .u-form-1 {
-    margin-top: 0;
-    margin-right: -10px;
-    margin-left: 0;
+    margin-top: 2px;
+    margin-right: initial;
+    margin-left: initial;
     width: auto;
   }
 
-  .u-section-1 .u-btn-1 {
-    width: 100%;
-  }
-
   .u-section-1 .u-text-3 {
-    margin: 9px -10px 0 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 406px;
+    min-height: 335px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 531px;
+  min-height: 630px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
   pointer-events: auto;
   margin-top: 45px;
-  margin-bottom: 45px;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-layout-cell-1 {
   pointer-events: auto;
   min-height: 470px;
+  background-image: none;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 30px 0;
+  padding: 30px 60px;
 }
 
-.u-section-2 .u-text-1 {
-  font-weight: 700;
-  margin: -30px 358px 0 0;
-}
-
-.u-section-2 .u-text-2 {
-  font-weight: normal;
-  margin: 96px 0 0;
+.u-section-2 .u-image-1 {
+  width: 295px;
+  height: 357px;
+  margin: 0 auto 0 18px;
 }
 
 .u-section-2 .u-layout-cell-2 {
@@ -272,163 +259,186 @@
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 30px 60px;
+  padding: 30px 0;
 }
 
-.u-section-2 .u-image-1 {
-  width: 295px;
-  height: 357px;
-  margin: 0 auto;
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  margin: -30px 329px 0 29px;
+}
+
+.u-section-2 .u-text-2 {
+  font-weight: normal;
+  margin: 96px 9px 0 29px;
+}
+
+.u-section-2 .u-text-3 {
+  font-weight: 700;
+  background-image: none;
+  margin: 77px 304px 14px;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 501px;
+    min-height: 594px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 425px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-right: 35px;
-  }
-
-  .u-section-2 .u-text-2 {
-    width: auto;
-    margin-top: 78px;
-    margin-right: 35px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
     background-position: 50% 50%;
-    min-height: 425px;
+    min-height: NaNpx;
   }
 
   .u-section-2 .u-image-1 {
     width: 277px;
     height: 331px;
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: NaNpx;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-2 .u-text-2 {
+    width: auto;
+    margin-top: 78px;
+    margin-left: 18px;
+    margin-right: 18px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-left: 204px;
+    margin-right: 204px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 564px;
+    min-height: 492px;
   }
 
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-2 .u-text-1 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-text-2 {
-    margin-right: 20px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 395px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 30px;
+  .u-section-2 .u-container-layout-1 {
     padding-right: 30px;
+    padding-left: 24px;
   }
 
   .u-section-2 .u-image-1 {
     width: 253px;
     height: 302px;
-    margin-left: -19px;
-    margin-right: -19px;
+    margin-right: 0;
+    margin-left: -8px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-right: 10px;
+    margin-left: 20px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 43px;
+    margin-right: 0;
+    margin-left: 20px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-left: 94px;
+    margin-right: 94px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 100vh;
+    min-height: 783px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
-    margin-top: 38px;
-    margin-bottom: 59px;
-  }
-
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 246px;
+    margin-top: 61px;
   }
 
   .u-section-2 .u-container-layout-1 {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-left: -50px;
-    margin-right: -50px;
-  }
-
-  .u-section-2 .u-text-2 {
-    margin-top: 27px;
-    margin-left: -50px;
-    margin-right: -50px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 328px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
   .u-section-2 .u-image-1 {
-    margin-right: auto;
     margin-left: 120px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: -20px;
+    margin-left: -50px;
+    margin-right: -50px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 4px;
+    margin-left: -50px;
+    margin-right: -50px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin: 45px 4px 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 616px;
+    min-height: 50vw;
   }
 
   .u-section-2 .u-layout-wrap-1 {
-    margin-top: 0;
-    margin-bottom: 40px;
+    width: 320px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 189px;
+    min-height: 342px;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-2 .u-image-1 {
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 210px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
     padding-top: 28px;
     padding-right: 0;
     padding-bottom: 0;
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: -7px;
     margin-right: 0;
   }
 
   .u-section-2 .u-text-2 {
-    margin-top: 7px;
+    margin-top: 10px;
     margin-right: 0;
-    margin-bottom: -21px;
+    margin-bottom: -30px;
   }
 
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 267px;
-  }
-
-  .u-section-2 .u-image-1 {
-    margin-top: 11px;
-    margin-left: auto;
+  .u-section-2 .u-text-3 {
+    width: auto;
+    margin: 75px 10px 9px;
   }
 }.u-section-3 {
   background-image: none;
@@ -457,11 +467,12 @@
 }
 
 .u-section-3 .u-text-2 {
-  font-size: 1.25rem;
+  font-weight: 700;
   margin: 20px 0 0;
 }
 
 .u-section-3 .u-text-3 {
+  font-weight: 700;
   margin: 20px 0 0;
 }
 
@@ -489,14 +500,15 @@
 }
 
 .u-section-3 .u-text-5 {
-  margin-bottom: 0;
   margin-top: 20px;
-  font-size: 1.25rem;
+  margin-bottom: 0;
+  font-weight: 700;
 }
 
 .u-section-3 .u-text-6 {
   margin-bottom: 0;
   margin-top: 20px;
+  font-weight: 700;
 }
 
 .u-section-3 .u-icon-2 {
@@ -525,12 +537,13 @@
 .u-section-3 .u-text-8 {
   margin-bottom: 0;
   margin-top: 20px;
-  font-size: 1.25rem;
+  font-weight: 700;
 }
 
 .u-section-3 .u-text-9 {
   margin-bottom: 0;
   margin-top: 20px;
+  font-weight: 700;
 }
 
 .u-section-3 .u-icon-3 {
@@ -550,21 +563,20 @@
 }
 
 .u-section-3 .u-text-10 {
-  margin-top: 0;
-  margin-bottom: 0;
   font-weight: 900;
   font-size: 3.75rem;
+  margin: 0;
 }
 
 .u-section-3 .u-text-11 {
-  margin-bottom: 0;
-  margin-top: 20px;
-  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 0 0;
 }
 
 .u-section-3 .u-text-12 {
   margin-bottom: 0;
   margin-top: 20px;
+  font-weight: 700;
 }
 
 .u-section-3 .u-icon-4 {
@@ -590,7 +602,7 @@
   }
 
   .u-section-3 .u-layout-cell-2 {
-    min-height: 408px;
+    min-height: 289px;
   }
 
   .u-section-3 .u-layout-cell-3 {
@@ -643,11 +655,6 @@
     margin-right: 0;
   }
 
-  .u-section-3 .u-text-5 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
   .u-section-3 .u-text-6 {
     margin-left: 0;
     margin-right: 0;
@@ -678,16 +685,6 @@
     margin-right: auto;
   }
 
-  .u-section-3 .u-text-10 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-3 .u-text-11 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
   .u-section-3 .u-text-12 {
     margin-left: 0;
     margin-right: 0;
@@ -696,6 +693,12 @@
   .u-section-3 .u-icon-4 {
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-text-1 {
+    width: auto;
   }
 }.u-section-4 {
   background-image: none;
@@ -987,138 +990,10 @@
 }
 
 .u-section-5 .u-sheet-1 {
-  min-height: 761px;
-}
-
-.u-section-5 .u-group-1 {
-  width: 632px;
-  min-height: 305px;
-  margin: 167px auto 0;
-}
-
-.u-section-5 .u-container-layout-1 {
-  padding: 30px;
-}
-
-.u-section-5 .u-image-1 {
-  width: 449px;
-  height: 543px;
-  margin: -424px auto 0;
-}
-
-.u-section-5 .u-text-1 {
-  letter-spacing: 0px;
-  font-weight: 900;
-  font-size: 2.25rem;
-  margin: 30px 456px 0 457px;
-}
-
-.u-section-5 .u-text-2 {
-  width: 427px;
-  font-weight: 700;
-  line-height: 2;
-  margin: 20px auto 60px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 778px;
-  }
-
-  .u-section-5 .u-group-1 {
-    margin-top: 158px;
-  }
-
-  .u-section-5 .u-text-1 {
-    width: auto;
-    margin-left: auto;
-    margin-right: 356px;
-  }
-
-  .u-section-5 .u-text-2 {
-    margin-bottom: 39px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 480px;
-  }
-
-  .u-section-5 .u-text-1 {
-    margin-right: 246px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 785px;
-  }
-
-  .u-section-5 .u-group-1 {
-    margin-top: 90px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-5 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-5 .u-image-1 {
-    margin-top: -349px;
-    margin-left: 46px;
-  }
-
-  .u-section-5 .u-text-1 {
-    margin-right: 156px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 674px;
-  }
-
-  .u-section-5 .u-group-1 {
-    margin-top: 39px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-container-layout-1 {
-    padding-top: 90px;
-  }
-
-  .u-section-5 .u-image-1 {
-    width: 280px;
-    height: 411px;
-    margin-top: -272px;
-    margin-left: auto;
-  }
-
-  .u-section-5 .u-text-1 {
-    margin-top: 25px;
-    margin-right: 56px;
-  }
-
-  .u-section-5 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
-    width: 340px;
-  }
-}.u-section-6 {
-  background-image: none;
-}
-
-.u-section-6 .u-sheet-1 {
   min-height: 217px;
 }
 
-.u-section-6 .u-text-1 {
+.u-section-5 .u-text-1 {
   letter-spacing: 0;
   font-weight: 900;
   width: 670px;
@@ -1127,7 +1002,7 @@
   margin: 60px auto 0;
 }
 
-.u-section-6 .u-social-icons-1 {
+.u-section-5 .u-social-icons-1 {
   white-space: nowrap;
   height: 37px;
   min-height: 16px;
@@ -1136,66 +1011,194 @@
   margin: 23px auto 60px 438px;
 }
 
-.u-section-6 .u-icon-1 {
+.u-section-5 .u-icon-1 {
   height: 100%;
 }
 
-.u-section-6 .u-icon-2 {
+.u-section-5 .u-icon-2 {
   height: 100%;
 }
 
-.u-section-6 .u-icon-3 {
+.u-section-5 .u-icon-3 {
   height: 100%;
 }
 
-.u-section-6 .u-icon-4 {
+.u-section-5 .u-icon-4 {
   height: 100%;
 }
 
-.u-section-6 .u-icon-5 {
+.u-section-5 .u-icon-5 {
   height: 100%;
 }
 
 @media (max-width: 1199px) {
-  .u-section-6 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 242px;
   }
 
-  .u-section-6 .u-social-icons-1 {
+  .u-section-5 .u-social-icons-1 {
     margin-left: auto;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-6 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 260px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-6 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 195px;
   }
 
-  .u-section-6 .u-text-1 {
+  .u-section-5 .u-text-1 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-6 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 367px;
   }
 
-  .u-section-6 .u-text-1 {
+  .u-section-5 .u-text-1 {
     font-size: 3.75rem;
     margin-left: 0;
     margin-right: 0;
     width: 340px;
   }
 
-  .u-section-6 .u-social-icons-1 {
+  .u-section-5 .u-social-icons-1 {
     margin-left: 38px;
+  }
+}.u-section-6 {
+  background-image: none;
+}
+
+.u-section-6 .u-sheet-1 {
+  min-height: 761px;
+}
+
+.u-section-6 .u-group-1 {
+  width: 632px;
+  min-height: 305px;
+  margin: 167px auto 0;
+}
+
+.u-section-6 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-6 .u-image-1 {
+  width: 449px;
+  height: 543px;
+  margin: -424px auto 0;
+}
+
+.u-section-6 .u-text-1 {
+  letter-spacing: 0px;
+  font-weight: 900;
+  font-size: 2.25rem;
+  margin: 30px 456px 0 457px;
+}
+
+.u-section-6 .u-text-2 {
+  width: 427px;
+  font-weight: 700;
+  line-height: 2;
+  margin: 20px auto 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 778px;
+  }
+
+  .u-section-6 .u-group-1 {
+    margin-top: 158px;
+  }
+
+  .u-section-6 .u-text-1 {
+    width: auto;
+    margin-left: auto;
+    margin-right: 356px;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-bottom: 39px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 480px;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-right: 246px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 785px;
+  }
+
+  .u-section-6 .u-group-1 {
+    margin-top: 90px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-6 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-6 .u-image-1 {
+    margin-top: -349px;
+    margin-left: 46px;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-right: 156px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 674px;
+  }
+
+  .u-section-6 .u-group-1 {
+    margin-top: 39px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-container-layout-1 {
+    padding-top: 90px;
+  }
+
+  .u-section-6 .u-image-1 {
+    width: 280px;
+    height: 411px;
+    margin-top: -272px;
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-top: 25px;
+    margin-right: 56px;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 340px;
   }
 }.u-section-7 {
   background-image: none;
