--- a/nicepage.css
+++ b/nicepage.css
@@ -8196,6 +8196,56 @@ ul.u-text li:last-child {
   display: block;
   width: 15px;
 }
+@media (min-width: 1200px) {
+  .u-text-default-xl {
+    display: table;
+    align-self: flex-start;
+  }
+  .u-text-default-xl:empty {
+    display: block;
+    width: 15px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .u-text-default-lg {
+    display: table;
+    align-self: flex-start;
+  }
+  .u-text-default-lg:empty {
+    display: block;
+    width: 15px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .u-text-default-md {
+    display: table;
+    align-self: flex-start;
+  }
+  .u-text-default-md:empty {
+    display: block;
+    width: 15px;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .u-text-default-sm {
+    display: table;
+    align-self: flex-start;
+  }
+  .u-text-default-sm:empty {
+    display: block;
+    width: 15px;
+  }
+}
+@media (max-width: 575px) {
+  .u-text-default-xs {
+    display: table;
+    align-self: flex-start;
+  }
+  .u-text-default-xs:empty {
+    display: block;
+    width: 15px;
+  }
+}
 .u-image,
 .u-background-effect-image,
 .u-video-poster {
@@ -16805,6 +16855,7 @@ blockquote .small:before {
   vertical-align: top;
 }
 .u-pagination {
+  margin-bottom: 0px;
   list-style: none;
   padding: 0;
   display: table;
@@ -16818,6 +16869,18 @@ blockquote .small:before {
 .u-pagination .u-pagination-item.disabled,
 .u-pagination .u-pagination-item.u-pagination-separator {
   pointer-events: none;
+}
+.u-pagination-left .u-pagination {
+  margin-left: 0 !important;
+  margin-right: auto !important;
+}
+.u-pagination-center .u-pagination {
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+.u-pagination-right .u-pagination {
+  margin-left: auto !important;
+  margin-right: 0 !important;
 }
 @media (max-width: 767px) {
   .u-pagination .u-pagination-item {
@@ -17750,6 +17813,23 @@ a.pswp__share--download:hover {
 .u-repeater-item {
   display: flex;
   position: relative;
+}
+.u-list-control {
+  display: flex;
+  position: relative;
+}
+.u-blog:not(.u-repeater),
+.u-products:not(.u-repeater) {
+  display: flex;
+  flex-direction: column;
+}
+.u-blog:not(.u-repeater) .u-repeater,
+.u-products:not(.u-repeater) .u-repeater {
+  flex: 1;
+}
+.u-blog:not(.u-repeater) .u-list-control,
+.u-products:not(.u-repeater) .u-list-control {
+  flex: 0;
 }
 .u-table table {
   width: 100%;
@@ -32940,12 +33020,12 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 991px) {
   .u-header .u-sheet-1 {
-    min-height: 193px;
+    min-height: 198px;
   }
 
   .u-header .u-image-1 {
-    margin-top: 74px;
-    margin-bottom: 0;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 }
 @media (max-width: 767px) {
@@ -32955,7 +33035,9 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-header .u-image-1 {
     width: 300px;
+    margin-top: 52px;
     margin-left: auto;
+    margin-bottom: 52px;
   }
 
   .u-header .u-logo-image-1 {
@@ -32963,13 +33045,9 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 575px) {
-  .u-header .u-sheet-1 {
-    min-height: 187px;
-  }
-
   .u-header .u-image-1 {
-    margin-top: 37px;
-    width: auto;
+    margin-top: 53px;
+    margin-bottom: 53px;
   }
 }
 .u-footer {
