--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Calibri", sans-serif;
   color: #444444;
 }
 
@@ -12,12 +12,12 @@ a {
 }
 
 a:hover {
-  color: #43aae1 !important;
+  color: #f26228 !important;
   text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Calibri", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .back-to-top i:hover {
   background: #151515;
-  color: #43aae1;
+  color: #f26228;
 }
 
 /*--------------------------------------------------------------
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 0px);
   left: calc(50% - 30px);
-  border: 6px solid #43aae1;
+  border: 6px solid #f26228;
   border-top-color: #151515;
   border-bottom-color: #151515;
   border-radius: 50%;
@@ -109,13 +109,14 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
+  /* background: rgba(0, 0, 0, 0.7); */
   transition: all 0.5s;
   z-index: 997;
   padding: 10px 0;
 }
 
 #header.header-scrolled, #header.header-inner-pages {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.7);
 }
 
 #header .logo {
@@ -133,7 +134,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo a span {
-  color: #43aae1;
+  color: #f26228;
 }
 
 #header .logo img {
@@ -165,80 +166,14 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   color: #fff;
   transition: 0.3s;
-  font-size: 15px;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 600;
+  font-size: 18px;
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #43aae1;
+  color: #f26228;
 }
 
-.nav-menu .drop-down ul {
-  display: block;
-  position: absolute;
-  left: 14px;
-  top: calc(100% + 30px);
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  padding: 0;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-}
 
-.nav-menu .drop-down:hover > ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.nav-menu .drop-down li {
-  min-width: 180px;
-  position: relative;
-}
-
-.nav-menu .drop-down ul a {
-  padding: 10px 20px;
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: none;
-  color: #151515;
-}
-
-.nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: #151515;
-  background: #43aae1;
-}
-
-.nav-menu .drop-down > a:after {
-  content: "\ea99";
-  font-family: IcoFont;
-  padding-left: 5px;
-}
-
-.nav-menu .drop-down .drop-down ul {
-  top: 0;
-  left: calc(100% - 30px);
-}
-
-.nav-menu .drop-down .drop-down:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-}
-
-.nav-menu .drop-down .drop-down > a {
-  padding-right: 35px;
-}
-
-.nav-menu .drop-down .drop-down > a:after {
-  content: "\eaa0";
-  font-family: IcoFont;
-  position: absolute;
-  right: 15px;
-}
 
 @media (max-width: 1366px) {
   .nav-menu .drop-down .drop-down ul {
@@ -254,7 +189,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Get Startet Button */
 .get-started-btn {
-  color: #fff;
+  color: white;
   border-radius: 4px;
   padding: 7px 25px 8px 25px;
   white-space: nowrap;
@@ -265,7 +200,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .get-started-btn:hover {
-  background: #43aae1;
+  background: #f26228;
   color: #343a40;
 }
 
@@ -414,14 +349,14 @@ h1, h2, h3, h4, h5, h6 {
 #hero h1 {
   margin: 0;
   font-size: 56px;
-  font-weight: 700;
+  font-weight: bolder;
   line-height: 64px;
   color: #fff;
-  font-family: "Poppins", sans-serif;
+  font-family: "Calibri", sans-serif;
 }
 
 #hero h1 span {
-  color: #43aae1;
+  color: #f26228;
 }
 
 #hero h2 {
@@ -441,7 +376,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .icon-box i {
   font-size: 32px;
   line-height: 1;
-  color: #43aae1;
+  color: #f26228;
 }
 
 #hero .icon-box h3 {
@@ -459,11 +394,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .icon-box h3 a:hover {
-  color: #43aae1;
+  color: #f26228;
 }
 
 #hero .icon-box:hover {
-  border-color: #43aae1;
+  border-color: #f26228;
 }
 
 #hero .footer-newsletter form {
@@ -487,19 +422,19 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   border: 0;
   background: none;
-  font-size: 16px;
+  font-size: 18px;
   padding: 0 20px;
-  background: #43aae1;
-  color: #151515;
+  background: #f26228;
+  color: white;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
 }
 
 #hero .footer-newsletter form input[type="submit"]:hover {
   background: white;
-  color:  #43aae1;
+  color:  #f26228;
   border: solid 2px;
-  border-color: #43aae1;
+  border-color: #f26228;
 }
 
 @media (min-width: 1024px) {
@@ -1583,19 +1518,19 @@ section {
   bottom: 0;
   border: 0;
   background: none;
-  font-size: 16px;
+  font-size: 18px;
   padding: 0 20px;
-  background: #43aae1;
-  color: #151515;
+  background: #f26228;
+  color: white;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
 }
 
 #footer .footer-top .footer-newsletter form input[type="submit"]:hover {
   background: white;
-  color:  #43aae1;
+  color:  #f26228;
   border: solid 2px;
-  border-color: #43aae1;
+  border-color: #f26228;
 }
 
 #footer .copyright {
